deploy: b31b8209c5fa426b5c7eeb84da5d91c56b8754a8

--- a/Index.html
+++ b/Index.html
@@ -163,6 +163,13 @@
 <li><a href="https://www.sidefx.com/">후디니</a>는 <a href="https://www.sidefx.com/">SideFx</a>사에서 만든 노드 기반 모델링 툴로써 절차적 모델링이 가능하다</li>
 <li><a href="https://www.orbolt.com/search/?q=softpackage:Houdini">https://www.orbolt.com/search/?q=softpackage:Houdini</a></li>
 </ul>
+<p><img src="./res/geo_detail.svg" alt="geo_detail.svg" /></p>
+<ul>
+<li>point</li>
+<li>vertex</li>
+<li>primitive</li>
+<li>detail</li>
+</ul>
 
                     </main>
 
