--- a/control/key.html
+++ b/control/key.html
@@ -260,6 +260,9 @@
 <p>Ctrl + Alt + S : tab menu 제거</p>
 </li>
 <li>
+<p>Alt + P : timeline 축소</p>
+</li>
+<li>
 <p>Ctrl + E : vex 편집창</p>
 </li>
 <li>
