--- a/etc/reference.html
+++ b/etc/reference.html
@@ -159,6 +159,15 @@
                 <div id="content" class="content">
                     <main>
                         <h2 id="무료"><a class="header" href="#무료">무료</a></h2>
+<ul>
+<li><a href="https://www.sidefx.com/tutorials/foundations-book/">https://www.sidefx.com/tutorials/foundations-book/</a>
+<ul>
+<li><a href="https://media.sidefx.com/uploads/article/foundations-book/houdini_foundations_19_5_01.pdf">https://media.sidefx.com/uploads/article/foundations-book/houdini_foundations_19_5_01.pdf</a></li>
+<li><a href="https://media.sidefx.com/uploads/article/foundations-book/19_5_foundations_projectfiles.zip">https://media.sidefx.com/uploads/article/foundations-book/19_5_foundations_projectfiles.zip</a></li>
+<li><a href="https://www.sidefx.com/tutorials/foundations-overview/">https://www.sidefx.com/tutorials/foundations-overview/</a></li>
+</ul>
+</li>
+</ul>
 <p><a href="https://learn.unity.com/project/getting-started-with-houdini-unity">https://learn.unity.com/project/getting-started-with-houdini-unity</a></p>
 <ul>
 <li><a href="https://www.dokak.net/">독학.net</a>
@@ -375,6 +384,29 @@
 </ul>
 </li>
 </ul>
+<h2 id="-1"><a class="header" href="#-1"></a></h2>
+<ul>
+<li>
+<p><a href="https://www.youtube.com/watch?v=emeTkdTQgGA">[NDC21-비주얼아트&amp;사운드] Making Hard Surface Easy</a></p>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=HZd4hQJ2MfA">Embark Asset Processor | Erik Hallberg | GDC HIVE 2023</a></li>
+</ul>
+</li>
+<li>
+<p>Subdivision</p>
+<ul>
+<li>마스터하기 어려움</li>
+<li>토폴로지에 대한 이해</li>
+</ul>
+</li>
+<li>
+<p>Zbrush</p>
+<ul>
+<li>Dynamesh, Polish</li>
+<li>파괴적</li>
+</ul>
+</li>
+</ul>
 <h2 id="gdc"><a class="header" href="#gdc">GDC</a></h2>
 <p><a href="https://youtu.be/bCcmwdrSTvM">Game Development Made Easy Using Houdini | Paul Ambrosiussen | GDC 2018</a></p>
 <p>ref - <a href="https://youtu.be/H4r_69WNE9o">Video games Created using Houdini</a></p>
@@ -399,6 +431,8 @@
 </ul>
 </li>
 </ul>
+<h2 id="-2"><a class="header" href="#-2"></a></h2>
+<p>https://www.appliedhoudini.com/</p>
 
                     </main>
 
