--- a/script/hscript.html
+++ b/script/hscript.html
@@ -201,6 +201,11 @@ $BBZ = relbbox(@P).z
 </ul>
 </li>
 </ul>
+<p>https://www.sidefx.com/docs/houdini/ref/expression_cookbook.html</p>
+<p>detail
+https://www.sidefx.com/docs/houdini/expressions/detail.html
+opinputpath
+https://www.sidefx.com/docs/houdini/expressions/opinputpath.html</p>
 
                     </main>
 
