--- a/etc/snippet.html
+++ b/etc/snippet.html
@@ -158,17 +158,40 @@
 
                 <div id="content" class="content">
                     <main>
-                        <ul>
-<li>점을 선으로 잇기: add&gt; polygons&gt; by group</li>
-<li>선을 나누기 : resample</li>
-<li>내부 선 지우기: add&gt; points&gt; Delete Geometry But Keep the Points</li>
-<li>Rigid body dynamics : RBD to FBX</li>
-<li>감마: Edit&gt; Color Settings&gt; Color correction&gt; Gamma&gt; 1
+                        <h1 id="팁"><a class="header" href="#팁">팁</a></h1>
+<ul>
+<li>
+<p>이전 버전 노드가 안보일때는</p>
+<ul>
+<li>Assets &gt; Asset Definition Toolbar &gt; Show Always</li>
+<li>예)
+<ul>
+<li>Curve</li>
+<li>Lab Cylinder Generator</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p>점을 선으로 잇기: add&gt; polygons&gt; by group</p>
+</li>
+<li>
+<p>선을 나누기 : resample</p>
+</li>
+<li>
+<p>내부 선 지우기: add&gt; points&gt; Delete Geometry But Keep the Points</p>
+</li>
+<li>
+<p>Rigid body dynamics : RBD to FBX</p>
+</li>
+<li>
+<p>감마: Edit&gt; Color Settings&gt; Color correction&gt; Gamma&gt; 1</p>
 <ul>
 <li><a href="https://www.sidefx.com/docs/houdini/render/linear.html">https://www.sidefx.com/docs/houdini/render/linear.html</a></li>
 </ul>
 </li>
-<li>각도설정
+<li>
+<p>각도설정</p>
 <ul>
 <li>copytopoint로 circle을 점에 붙인다</li>
 <li>carve의 U를 이용 각도를 가진 점을 얻고 - 포인트가 0부터 시작하는걸 변하게 하는게 좋을듯</li>
@@ -176,19 +199,22 @@
 <li>add로 선을 이어주자 - polygons &gt; By Group</li>
 </ul>
 </li>
-<li>어트리뷰트 비쥬얼라이제이션
+<li>
+<p>어트리뷰트 비쥬얼라이제이션</p>
 <ul>
 <li>포인트 번호 표시해주는 툴바에 visualization 우클릭</li>
 </ul>
 </li>
-<li>디버그용 선을 이어보기
+<li>
+<p>디버그용 선을 이어보기</p>
 <ul>
 <li>어트리뷰트를 이용하여 정보용 점을 추가로 만들고</li>
 <li>merge</li>
 <li>Add&gt; By Group&gt; Add&gt; By Attribute&gt; Attribute Name 설정</li>
 </ul>
 </li>
-<li>grid를 텍스쳐로 굽기
+<li>
+<p>grid를 텍스쳐로 굽기</p>
 <ul>
 <li><a href="https://blog.naver.com/checkjei/222622327344">https://blog.naver.com/checkjei/222622327344</a></li>
 <li>geo &gt; grid / uvtexture / attribvop</li>
@@ -208,7 +234,8 @@
 <li>Render to Disk 버튼 클릭</li>
 </ul>
 </li>
-<li>https://www.sidefx.com/docs/houdini/unity/sourcecontrol.html
+<li>
+<p>https://www.sidefx.com/docs/houdini/unity/sourcecontrol.html</p>
 <ul>
 <li><UnityProject>/heu_session.txt : 현재 세션 정보를 저장하는 데 사용하는 임시 파일
 <ul>
@@ -239,7 +266,8 @@
 </li>
 </ul>
 </li>
-<li>두 점 사이의 점
+<li>
+<p>두 점 사이의 점</p>
 <ul>
 <li>subdivide로 가운데 점 찍고</li>
 <li>delete
@@ -308,10 +336,15 @@
 </ul>
 </li>
 <li>
-<p>백틱(``)</p>
+<p>백틱(``) : 이름 활용</p>
 </li>
 </ul>
 <pre><code class="language-txt">example_`rint(fit01(rand(detail("../foreach_begin2_metadata1/", "iteration", 0)), 1, 5))`
+</code></pre>
+<ul>
+<li>백틱(``) : 스위치에서 랜덤 활용</li>
+</ul>
+<pre><code class="language-txt">rand(detail("../foreach_begin2_metadata1/", "iteration", 0)) * opinputs(".")
 </code></pre>
 <ul>
 <li>
@@ -340,10 +373,141 @@
 <hr />
 <p>vex연습</p>
 <ul>
-<li>chramp로 그리고 chi갯수만큼
+<li>
+<p>chramp로 그리고 chi갯수만큼</p>
 <ul>
 <li>point 추가</li>
 <li>primitive 추가</li>
+</ul>
+</li>
+<li>
+<p>pivot</p>
+<ul>
+<li>bbox(opinputpath(".", 0), D_XSIZE)</li>
+<li>bbox(opinputpath(".", 0), D_YSIZE)</li>
+<li>bbox(opinputpath(".", 0), D_ZSIZE)</li>
+</ul>
+</li>
+<li>
+<p>uv project 1</p>
+<ul>
+<li>wrangle ( detail )</li>
+</ul>
+</li>
+</ul>
+<p>vector size = getbbox_size(0);
+if (size.x &gt; size.z)
+{
+@project_size = size.x;
+}
+else
+{
+@project_size = size.z;
+}</p>
+<ul>
+<li>uv project
+<ul>
+<li>translate
+<ul>
+<li>centroid(opinputpath(".", 0), D_X)</li>
+<li>centroid(opinputpath(".", 0), D_Y)</li>
+<li>centroid(opinputpath(".", 0), D_Z)</li>
+</ul>
+</li>
+<li>scale
+<ul>
+<li>detail(opinputpath(".", 0), "project_size", 0)</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<hr />
+<ul>
+<li>Performance monitor pane
+<ul>
+<li>https://www.sidefx.com/docs/houdini/ref/panes/perfmon.html</li>
+<li>Windows &gt; Performance Monitor Alt + Y</li>
+</ul>
+</li>
+</ul>
+<hr />
+<p>matrix  maketransform(int trs, int xyz, vector t, vector r, vector s)
+matrix  maketransform(vector zaxis, vector yaxis, vector translate)</p>
+<p>matrix location_matrix = maketransform(
+XFORM_TRS,
+XFORM_XYZ,
+p0,
+{0, 0, 0}
+);
+matrix rotation_matrix = maketransform(right, world_up, {0, 0, 0});
+matrix m = rotation_matrix * location_matrix;
+@P = invert(m);
+@P = m;</p>
+<hr />
+<p>상단 면 중앙에 점 찍기
+vex 방식
+if (@N.y &gt; 0.1)
+{
+string prim_str = itoa(@primnum);
+vector center = getbbox_center(0, prim_str);
+addpoint(0, center);
+}
+blast/name/foreach(primitive)/extractcentroid 방식</p>
+<hr />
+<ul>
+<li>
+<p>카메라를 통한 디버그 메시지 보여주기</p>
+<ul>
+<li>카메라노드에서 Edit Render Properties
+<ul>
+<li>Viewport Display &gt; OpenGL View &gt; Viewport Comment 추가해서 내용 입력하면 씬뷰에서 나타남. (``을 사용하여 vex코드 삽입가능)</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p>각 구하기</p>
+</li>
+</ul>
+<pre><code class="language-vex">int ptnum_prev;
+int ptnum_next;
+
+int ptnum_last = npoints(0) - 1;
+if (@ptnum  == 0)
+{
+    ptnum_prev = ptnum_last;
+    ptnum_next = 1;
+}
+else if (@ptnum == ptnum_last)
+{
+    ptnum_prev = ptnum_last - 1;
+    ptnum_next = 0;
+}
+else
+{
+    ptnum_prev = @ptnum - 1;
+    ptnum_next = @ptnum + 1;
+}
+
+
+vector pos_prev = point(0, "P", ptnum_prev);
+vector pos_next = point(0, "P", ptnum_next);
+
+vector dir_prev = normalize(@P - pos_prev);
+vector dir_next = normalize(@P - pos_next);
+
+float angle = degrees(acros(dot(dir_prev, dir_next)));
+</code></pre>
+<hr />
+<ul>
+<li>분홍색 마크
+<ul>
+<li>Display Option : Marker
+<ul>
+<li>Set display option for : Tempalte Model Geometry 설정 바꿔주면 분홍색 마크시 보여지는거 달라지게 됨.</li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
